@@ -17,6 +17,7 @@ Changelog as of December 5, 2011:
 = CSS =
 * Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
 * Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
+* Removed (using comments) `background property` from `code` element
 
 /**
  * Internet Browsers Reviewed
